# bayes-ca

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: run_tests.yml
bayes_ca/: __init__.py  _utils.py  inference.py  prox_grad.py
bayes_ca/data/: __init__.py  bbt-proc.py  global_means_7500itr.npy  lps_7500itr.npy  subj_means_7500itr.npy  tlae-embeddings.py  tlae-fmriprep.sh  tlae-postproc.py  utils.py
bayes_ca/docs/: schematics.py
bayes_ca/tests/: test_inference.py
experiments/: bifurcation.py  hierarchical.ipynb  hierarchical_stagger_jump.ipynb  naturalistic_data.py  odds-and-ends.ipynb  schematic_simulation.ipynb  sigma_sweeps.py  simple_example.py  simulation.py  simulations.ipynb  testing_limits.ipynb  three_subjects.py
